# ai_interviewer

./: Dockerfile  README  README.md  docker-compose.yml  pyproject.toml  template.env
src/: config.py  main.py  template.env
src/bot/: commands.py  handlers.py  keyboards.py  models.py  states.py  utils.py
src/bot/bot_content/: basics.py  skills.py  texts.py
src/bot/models/: basics.py
src/db/: db.py  migrate.py  models.py
src/giga_chat/: giga_chat.py  models.py  prompts.py
src/tests/: conftest.py  test_db.py
